# kris-watcher

./: Cargo.toml  README.md  nothing_bruh.ans
frames/: 11.trans  18.trans  19.trans  20.trans  21.trans  24.trans  26.trans  27.trans  28.trans  29.trans  30.trans  31.trans  32.trans  34.trans  35.trans  50.trans  54.trans  56.trans  58.trans  60.trans  61.trans  63.trans  64.trans  65.trans  67.trans  68.trans  69.trans  70.trans  74.trans  76.trans  78.trans  80.trans  frame_000.ans  frame_001.ans  frame_002.ans  frame_003.ans  frame_004.ans  frame_005.ans  frame_006.ans  frame_007.ans  (+179 more)
shiggy/: 10_optimized.trans  1_optimized.trans  2_optimized.trans  3_optimized.trans  4_optimized.trans  5_optimized.trans  6_optimized.trans  7_optimized.trans  8_optimized.trans  9_optimized.trans
src/: animation.rs  config.rs  git.rs  main.rs  uwu.rs
src/tui/: animation.rs  events.rs  mod.rs  notifications.rs  terminal.rs  ui.rs
