[package]
name = "kris-watcher"
version = "0.1.6"
edition = "2021"
description = "hire this guy so he can make sure that u don't forget to git commit ur changes"
license = "MIT"
homepage = "https://github.com/youssef/git-watcher"
repository = "https://github.com/youssef/git-watcher"
keywords = ["git", "watcher", "cli", "terminal"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
notify-rust = "4"
ansi-to-tui = "7.0.0"
crossterm = "0.27.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
regex = "1"
lazy_static = "1.4.0"
walkdir = "2.5.0"
